Fix a spacing issue

--- a/components/IconLibrary/LibraryView.module.scss
+++ b/components/IconLibrary/LibraryView.module.scss
@@ -38,7 +38,6 @@
 
 .searchBox {
   background-color: hsl(var(--white));
-  margin: 0 1rem 0 0;
 }
 
 .iconLibrary {
